namespace java com.igool.rpc.db.model.thrift
struct Roles {
			1:i32 rolesId,
			2:string code,
			3:string name,
			4:string remarks,
			5:i32 type,
			6:i32 createUser,
			7:string createDate,
			8:i32 status,
			9:i32 updateUser,
			10:string updateDate,
			11:i32 isSelected
	}